# otp_mail

./: .gitignore  Dockerfile  README.md  aiogram.py  docker-compose.yml  env.example  extract_eml.py  main.py  pyproject.toml  requirements.txt  test_email.py
